[gd_scene load_steps=15 format=3 uid="uid://d0y2nmepdt2pj"]

[ext_resource type="Script" path="res://UI/MainMenu/main_menu.gd" id="1_fu6vu"]
[ext_resource type="PackedScene" uid="uid://bngold1yrgekl" path="res://Arena/arena.tscn" id="1_levnm"]
[ext_resource type="Environment" uid="uid://ciipvdp53q8qo" path="res://Misc/MainEnv.tres" id="1_qi8qv"]
[ext_resource type="PackedScene" uid="uid://cufn7ji82vhtv" path="res://Models/Commando/RaptorCommando.glb" id="2_w0nex"]
[ext_resource type="Theme" uid="uid://bybm5iuhmxeoj" path="res://UI/main_theme.tres" id="3_xg8ev"]
[ext_resource type="Script" path="res://UI/Components/button_anim_component.gd" id="4_vgnm4"]
[ext_resource type="Shader" path="res://Shaders/Vignette.gdshader" id="5_4xcmi"]
[ext_resource type="Script" path="res://UI/MainMenu/menu.gd" id="6_r5gp6"]
[ext_resource type="Script" path="res://UI/Credits/credits.gd" id="7_018bb"]
[ext_resource type="Script" path="res://UI/Settings/settings.gd" id="8_fbtit"]

[sub_resource type="Environment" id="Environment_tvhjm"]
background_mode = 1
background_color = Color(0.41249, 0.734924, 0.938587, 1)
reflected_light_source = 2
tonemap_mode = 2
glow_intensity = 0.2
glow_hdr_threshold = 0.2
adjustment_enabled = true
adjustment_brightness = 0.95
adjustment_contrast = 1.15
adjustment_saturation = 0.9

[sub_resource type="ShaderMaterial" id="ShaderMaterial_om8ps"]
shader = ExtResource("5_4xcmi")
shader_parameter/vignette_intensity = 0.2
shader_parameter/vignette_opacity = 0.089
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g24q3"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_4ss05"]
font_size = 25

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_fu6vu")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_qi8qv")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.990268, 0.139173, 0, -0.139173, 0.990268, -0.635, 5.137, 1.974)
environment = SubResource("Environment_tvhjm")
current = true

[node name="Arena" parent="." instance=ExtResource("1_levnm")]

[node name="RaptorCommando" parent="." instance=ExtResource("2_w0nex")]
transform = Transform3D(0.113203, 0, -0.993572, 0, 1, 0, 0.993572, 0, 0.113203, 3.858, 0.46, -2.547)

[node name="Skeleton3D" parent="RaptorCommando/RaptorCommando_001" index="0"]
bones/0/position = Vector3(-0.00169452, 3.00919, 0.340054)
bones/0/rotation = Quaternion(1.60095e-07, -0.569149, 0.822234, -1.10817e-07)
bones/1/rotation = Quaternion(1.92893e-07, 0.0511689, 0.99869, -9.96228e-09)
bones/2/rotation = Quaternion(-7.50228e-05, 0.999815, -0.0191978, 0.00115631)
bones/3/rotation = Quaternion(0.000370724, 0.931858, 0.362822, -0.00109793)
bones/4/rotation = Quaternion(-0.126672, -1.20924e-07, -1.54645e-08, 0.991945)
bones/6/position = Vector3(-0.00840289, 0.403969, 0.490247)
bones/6/rotation = Quaternion(0.0110239, 0.899577, 0.436498, 0.0104673)
bones/7/position = Vector3(0.00590881, 0.590108, 0.658294)
bones/7/rotation = Quaternion(0.010807, 0.845148, 0.534196, 0.0155712)
bones/9/rotation = Quaternion(-0.198988, 0.1971, -0.665821, 0.691547)
bones/10/rotation = Quaternion(0.580593, 3.19821e-06, -2.30799e-06, 0.814194)
bones/10/scale = Vector3(1, 0.999985, 1.00001)
bones/12/rotation = Quaternion(-0.198988, -0.1971, 0.665821, 0.691547)
bones/13/rotation = Quaternion(0.580593, -3.28258e-06, 2.23026e-06, 0.814194)
bones/13/scale = Vector3(1, 0.999985, 1.00002)
bones/14/rotation = Quaternion(-1.37847e-08, 0.98319, -0.182583, -3.0864e-07)
bones/15/rotation = Quaternion(0.0192654, -1.19187e-07, 2.29661e-09, 0.999814)
bones/16/rotation = Quaternion(-0.0137358, 5.07739e-14, 5.27267e-16, 0.999906)
bones/17/rotation = Quaternion(0.0505618, -3.15521e-15, 2.1017e-15, 0.998721)
bones/18/rotation = Quaternion(-0.0285858, 1.19161e-07, -3.4077e-09, 0.999591)
bones/19/rotation = Quaternion(-0.0228047, 1.19178e-07, -8.15558e-09, 0.99974)
bones/20/rotation = Quaternion(0.0473811, -2.38151e-07, 1.12965e-08, 0.998877)
bones/21/rotation = Quaternion(-0.0370051, 1.19128e-07, -4.41136e-09, 0.999315)
bones/22/rotation = Quaternion(0.0113765, -1.19202e-07, 1.35619e-09, 0.999935)
bones/23/rotation = Quaternion(-0.0265121, 1.19167e-07, -3.16049e-09, 0.999649)
bones/24/rotation = Quaternion(-0.0260201, 3.77835e-15, -6.20368e-09, 0.999661)
bones/25/rotation = Quaternion(0.445196, -0.476238, 0.563821, 0.507055)
bones/26/rotation = Quaternion(0.0168762, -0.0325811, -0.737316, 0.674551)
bones/27/rotation = Quaternion(-0.500277, 1.90136e-06, 1.20155e-06, 0.865865)
bones/28/rotation = Quaternion(0.561719, 2.44333e-08, -1.69437e-07, 0.827328)
bones/29/rotation = Quaternion(0.445195, 0.476238, -0.563821, 0.507055)
bones/30/rotation = Quaternion(0.0168763, 0.0325812, 0.737316, 0.674551)
bones/31/rotation = Quaternion(-0.500277, -1.8892e-06, -1.19882e-06, 0.865865)
bones/32/rotation = Quaternion(0.561719, -2.54656e-08, 1.7095e-07, 0.827328)
bones/33/rotation = Quaternion(1.37679e-07, 0.707107, 0.707107, 1.37679e-07)
bones/34/rotation = Quaternion(-0.686919, -0.0306942, -0.0324117, 0.725362)
bones/35/position = Vector3(0.611549, 0.0219753, -0.318177)
bones/35/rotation = Quaternion(-0.505573, 0.494364, -0.494364, 0.505574)
bones/36/rotation = Quaternion(-0.699136, 2.52103e-08, 0.714989, -5.65331e-10)
bones/38/rotation = Quaternion(-1.37679e-07, 0.707107, 0.707107, -1.37679e-07)
bones/39/rotation = Quaternion(-0.686919, 0.0306942, 0.0324117, 0.725362)
bones/40/position = Vector3(-0.614938, 0.0219753, -0.318177)
bones/40/rotation = Quaternion(-0.505573, -0.494364, 0.494364, 0.505574)
bones/42/rotation = Quaternion(1.37679e-07, 0.707107, -0.707107, -1.37679e-07)

[node name="AnimationPlayer" parent="RaptorCommando" index="1"]
autoplay = "idle"

[node name="ShadersLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="ShadersLayer"]
material = SubResource("ShaderMaterial_om8ps")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_xg8ev")
script = ExtResource("6_r5gp6")

[node name="DarkenRect" type="ColorRect" parent="UILayer/Menu"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0.235294, 0.235294, 0.709804)

[node name="Credits" type="MarginContainer" parent="UILayer/Menu"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
script = ExtResource("7_018bb")

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/Menu/Credits"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UILayer/Menu/Credits/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]
[font_size=28]Game Design and Programming[/font_size]
[font_size=24]SasVel[/font_size]
[font_size=24]Arganm[/font_size]

[font_size=28]3D Modelling, Rigging, Animations[/font_size]
[font_size=24]SasVel[/font_size]

[font_size=28]Music and Sounds[/font_size]
[font_size=24]Rhyan[/font_size]

[font_size=28]Resources[/font_size]
[font_size=26]Fonts[/font_size]
[font_size=22][url=https://www.1001fonts.com/lapsus-pro-font.html]Lapsus Pro[/url][/font_size]
[font_size=22][url=https://www.1001fonts.com/lexographer-font.html]Lexographer[/url][/font_size]

[font_size=26]Misc[/font_size]
[font_size=22][url=https://sketchfab.com/3d-models/velociraptor-very-low-poly-71b76520ebff41e4b760746586e5ab58]Velociraptor base model[/url][/font_size]
[font_size=22][url=https://lospec.com/palette-list/resurrect-64]Palette - Resurrect 64[/url][/font_size]
[font_size=22][url=https://www.flaticon.com/free-icons/target]Target Icon[/url][/font_size]
[/center]"

[node name="BackBtn" type="Button" parent="UILayer/Menu/Credits/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="ButtonAnimComponent" type="Node" parent="UILayer/Menu/Credits/VBoxContainer/BackBtn"]
script = ExtResource("4_vgnm4")

[node name="Settings" type="Control" parent="UILayer/Menu"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("8_fbtit")

[node name="MarginContainer" type="MarginContainer" parent="UILayer/Menu/Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -219.0
offset_right = 328.0
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsContainer" type="VBoxContainer" parent="UILayer/Menu/Settings/MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Video" type="MarginContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Container" type="VBoxContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video"]
layout_mode = 2

[node name="Mouse" type="HBoxContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Mouse"]
layout_mode = 2
size_flags_horizontal = 10
text = "Mouse Sensitivity"
label_settings = SubResource("LabelSettings_g24q3")

[node name="SensitivitySlider" type="HSlider" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Mouse"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
max_value = 5.0
step = 0.1
value = 3.0

[node name="Crosshair" type="Label" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container"]
layout_mode = 2
text = "Crosshair"
label_settings = SubResource("LabelSettings_4ss05")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Color" type="HBoxContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Color"]
layout_mode = 2
size_flags_horizontal = 10
text = "Color"
label_settings = SubResource("LabelSettings_g24q3")

[node name="ColorPickerButton" type="ColorPickerButton" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Color"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2

[node name="InvertColor" type="HBoxContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/InvertColor"]
layout_mode = 2
size_flags_horizontal = 10
text = "Inverse Color"
label_settings = SubResource("LabelSettings_g24q3")

[node name="InverseColorCheck" type="CheckBox" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/InvertColor"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2

[node name="Opacity" type="HBoxContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Opacity"]
layout_mode = 2
size_flags_horizontal = 10
text = "Opacity"
label_settings = SubResource("LabelSettings_g24q3")

[node name="OpacitySlider" type="HSlider" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Opacity"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 1.0

[node name="Width" type="HBoxContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="WidthLabel" type="Label" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Width"]
layout_mode = 2
size_flags_horizontal = 10
text = "Width"
label_settings = SubResource("LabelSettings_g24q3")

[node name="WidthSlider" type="HSlider" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Width"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 10.0
step = 0.1
value = 1.0

[node name="Length" type="HBoxContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="LengthLabel" type="Label" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Length"]
layout_mode = 2
size_flags_horizontal = 10
text = "Length"
label_settings = SubResource("LabelSettings_g24q3")

[node name="LengthSlider" type="HSlider" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Length"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 40.0
step = 0.1
value = 1.0

[node name="Audio" type="MarginContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Container" type="VBoxContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio/Container"]
layout_mode = 2
text = "Volume"
label_settings = SubResource("LabelSettings_4ss05")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainVolContainer" type="HBoxContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio/Container"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MainLabel" type="Label" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio/Container/MainVolContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Main"
label_settings = SubResource("LabelSettings_g24q3")

[node name="MainVolSlider" type="HSlider" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio/Container/MainVolContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="MusicVolContainer" type="HBoxContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio/Container"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MusicLabel" type="Label" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio/Container/MusicVolContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Music"
label_settings = SubResource("LabelSettings_g24q3")

[node name="MusicVolSlider" type="HSlider" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio/Container/MusicVolContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="SfxVolContainer" type="HBoxContainer" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio/Container"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SfxLabel" type="Label" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio/Container/SfxVolContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Sound Effects"
label_settings = SubResource("LabelSettings_g24q3")

[node name="SfxVolSlider" type="HSlider" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio/Container/SfxVolContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="BackBtn" type="Button" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Back"

[node name="ButtonAnimComponent" type="Node" parent="UILayer/Menu/Settings/MarginContainer/SettingsContainer/BackBtn"]
script = ExtResource("4_vgnm4")
time = 0.2

[node name="MainMenuComponents" type="MarginContainer" parent="UILayer/Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 567.0
grow_vertical = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 45

[node name="RichTextLabel" type="RichTextLabel" parent="UILayer/Menu/MainMenuComponents"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
bbcode_enabled = true
text = "[font=res://Misc/Fonts/lexographer.regular.ttf][color=WHITE][font_size=80][outline_size=20][shake rate=20.0 level=5 connected=1]Velocirambo[/shake][/outline_size][/font_size][/color][/font]"
fit_content = true
scroll_active = false

[node name="BtnsContainer" type="VBoxContainer" parent="UILayer/Menu/MainMenuComponents"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
alignment = 1

[node name="NewGameBtn" type="Button" parent="UILayer/Menu/MainMenuComponents/BtnsContainer"]
layout_mode = 2
text = "New Game"

[node name="ButtonAnimComponent" type="Node" parent="UILayer/Menu/MainMenuComponents/BtnsContainer/NewGameBtn"]
script = ExtResource("4_vgnm4")
time = 0.2
pivotPos = 0

[node name="SettingsBtn" type="Button" parent="UILayer/Menu/MainMenuComponents/BtnsContainer"]
layout_mode = 2
text = "Settings"

[node name="ButtonAnimComponent" type="Node" parent="UILayer/Menu/MainMenuComponents/BtnsContainer/SettingsBtn"]
script = ExtResource("4_vgnm4")
time = 0.2
pivotPos = 0

[node name="CreditsBtn" type="Button" parent="UILayer/Menu/MainMenuComponents/BtnsContainer"]
layout_mode = 2
text = "Credits"

[node name="ButtonAnimComponent" type="Node" parent="UILayer/Menu/MainMenuComponents/BtnsContainer/CreditsBtn"]
script = ExtResource("4_vgnm4")
time = 0.2
pivotPos = 0

[node name="QuitBtn" type="Button" parent="UILayer/Menu/MainMenuComponents/BtnsContainer"]
layout_mode = 2
text = "Exit"

[node name="ButtonAnimComponent" type="Node" parent="UILayer/Menu/MainMenuComponents/BtnsContainer/QuitBtn"]
script = ExtResource("4_vgnm4")
time = 0.2
pivotPos = 0

[connection signal="pressed" from="UILayer/Menu/Credits/VBoxContainer/BackBtn" to="UILayer/Menu/Credits" method="_on_back_btn_pressed"]
[connection signal="value_changed" from="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Mouse/SensitivitySlider" to="UILayer/Menu/Settings" method="_on_sensitivity_slider_value_changed"]
[connection signal="color_changed" from="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Color/ColorPickerButton" to="UILayer/Menu/Settings" method="_on_color_picker_button_color_changed"]
[connection signal="toggled" from="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/InvertColor/InverseColorCheck" to="UILayer/Menu/Settings" method="_on_inverse_color_check_toggled"]
[connection signal="value_changed" from="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Opacity/OpacitySlider" to="UILayer/Menu/Settings" method="_on_opacity_slider_value_changed"]
[connection signal="value_changed" from="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Width/WidthSlider" to="UILayer/Menu/Settings" method="_on_width_slider_value_changed"]
[connection signal="value_changed" from="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Video/Container/Length/LengthSlider" to="UILayer/Menu/Settings" method="_on_length_slider_value_changed"]
[connection signal="value_changed" from="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio/Container/MainVolContainer/MainVolSlider" to="UILayer/Menu/Settings" method="_on_main_vol_slider_value_changed"]
[connection signal="value_changed" from="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio/Container/MusicVolContainer/MusicVolSlider" to="UILayer/Menu/Settings" method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="UILayer/Menu/Settings/MarginContainer/SettingsContainer/TabContainer/Audio/Container/SfxVolContainer/SfxVolSlider" to="UILayer/Menu/Settings" method="_on_sfx_vol_slider_value_changed"]
[connection signal="pressed" from="UILayer/Menu/Settings/MarginContainer/SettingsContainer/BackBtn" to="UILayer/Menu/Settings" method="_on_back_btn_pressed"]
[connection signal="pressed" from="UILayer/Menu/MainMenuComponents/BtnsContainer/NewGameBtn" to="UILayer/Menu" method="_on_new_game_btn_pressed"]
[connection signal="pressed" from="UILayer/Menu/MainMenuComponents/BtnsContainer/SettingsBtn" to="UILayer/Menu" method="_on_settings_btn_pressed"]
[connection signal="pressed" from="UILayer/Menu/MainMenuComponents/BtnsContainer/CreditsBtn" to="UILayer/Menu" method="_on_credits_btn_pressed"]
[connection signal="pressed" from="UILayer/Menu/MainMenuComponents/BtnsContainer/QuitBtn" to="UILayer/Menu" method="_on_quit_btn_pressed"]

[editable path="RaptorCommando"]
